Fixing bootstrap grid overlapping text (#29)
* Centering the image links

* Fixing image scaling on resource page

* Changing multiple up-btn id to class

* Fixing bootstrap grid column overlapping text

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,11 +1,28 @@
-h1{
+h1 {
     font-size: 30px;
 }
 .col-md-2 {
     text-align: center;
 }
+.col-md-3 {
+    text-align: center;
+}
 .col-md-4 {
     align-content: center;
+}
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+img {
+    width: auto;
+    max-width: 250px;
+    max-height: 120px;
+}
+.img-link-div {
+    height: 150px;
+    line-height: 150px;
 }
 h2{
     font-size: 25px;
